[package]
edition = "2021"
name = "eths-tasks"
version = "0.1.0"

[dependencies]

tokio = {version = "1.34.0", features = ["sync", "rt"]}
tracing-futures = "0.2"
dyn-clone = "1.0"
futures-util = "0.3.29"
tracing = "0.1.40"
metrics = "0.21.1"
thiserror = "1.0.50"

[dev-dependencies]
tokio = {version = "1.34.0", features = ["sync", "rt", "rt-multi-thread", "time", "macros"]}
